# solarcalendar

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/solar_hijri_calendar/: main.py
src/solarcalendar/: __init__.py  main.py
tests/: test_functions.py
