[metadata]
name = SolarCalendar
version = 0.1.1
author = Kamyar Ghanbarpour
author_email = kmgirmia@gmail.com
description = This module allows you to output calendars like the Unix jcal program, 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kamyarmg/solarcalendar
project_urls =
    Bug Tracker = https://github.com/kamyarmg/solarcalendar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jdatetime >= 3.8.0

[options.packages.find]
where = src